- Fixed an issue with the Point Buy form incorrectly setting metavariant metatypes to be themselves (ie Dryad (Dryad)).
- Fixed an inappropriate bracket for improvements to skills that don't have a condition.
- Fixed behaviour of html tooltips used by skill controls not properly being rendered for html. Fixes newlines in notes not working. 

Application Changes:
- Added support for Priority mode using non-ABCDE arrays.
- Spells, rituals and preparations now count down from maximum, in the same way as other counters in create mode.
- Added a new improvement type that can disable a skill group selected by the user. To be used by RunnerHub customdata ruleset. 
- Added a new improvement type that governs whether a character can become a cyberzombie. Customdata has been provided to apply this to the Flashback System from Chrome Flesh.
- Power Foci and Spellcasting Foci now only provide the highest of their dicepool to a given spell's dicepool per SR5 318. Implemented by https://github.com/MemeticContagion
- Critter power categories can now be whitelisted via the Improvement system. This filtering is done through a Contains operation, which means that a quality flagged as the Paranormal/Infected category matches either Paranormal OR Infected. This means that characters that should have access to the Drake, Echoes, Emergent, Free Spirit, Infected and Toxic Critter Powers categories will need to Reapply Improvements for them to be visible. Closes #3951
- Cyberware pair bonuses now allow the option to exclude themselves from the bonus by adding includeself="False" to the wirelesspairinclude node that lists which cyberwares the item pairs with. This is to prevent interaction with things like Wired Reflexes from cybersuite upgrades causing a stack. 
- The limitspellcategory improvement now supports specifying the category of spell in the bonus node.